# Protected-State-Correction-Theory

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_INDEX.md  FINAL_REPORT.md  NOVELTY_AND_LIMITS.md  README.md  RESEARCH_MAP.md  ROADMAP.md  SECURITY.md  STATUS.md  SUPPORT.md  SYSTEM_REPORT.md  USEFULNESS_REPORT.md  pyproject.toml  validation_summary.json
.github/: PULL_REQUEST_TEMPLATE.md
branches/: README.md
data/: README.md
discovery/: README.md  anomaly_catalog.csv  context_sensitive_test_validity_audit.md  equation_candidates.md  extracted_quantum_alignment_results_2026.txt  full_system_anomaly_report.md  full_system_candidate_results.md  full_system_inventory.csv  full_system_source_map.md  invariant_global_falsification_report.md  invariant_new_definitions_master.md  invariant_new_falsification_log.md  invariant_test_notes.md  new_structures_report.md  operator_candidates.md  operator_falsification_report.md  operator_test_notes.md  positive_framework_equation_candidates.md  positive_framework_falsification_report.md  projection_candidates.md  sfpr_inventory.csv  sfpr_source_map.md  sfpr_test_validity_audit.md  theory_candidates.md  witness_catalog.csv
docs/: index.html
papers/: README.md  bridge_paper.md  descriptor-fiber-anti-classifier-branch.md  meta_theory_interaction_and_limits.md  meta_theory_real_addition.md  mhd_paper_upgraded.md  ocp_core_paper.md  public_reference_map.md  push_plan.md  recoverability_paper_final.md  release_audit.md  release_final_summary.md  repo_alignment_report.md  (+2 more)
(+969 files in other folders)
