[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-research-program"
version = "0.1.0"
description = "Orthogonal Correction Principle research program: formalism, operator constructions, and validation tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Steven Reid"}]
dependencies = ["numpy>=1.24"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
